<resources>

    <string name="app_name">MediCare</string>
    <string name="app_name_sub">Online consultancy and Medicine purchase</string>
    <string name="log_in">Log IN</string>
    <string name="sign_in">Sign IN</string>
    <string name="signup">SignUp Now!</string>
    <string name="ip">IP Address</string>
    <string name="submit">submit</string>
    <string name="pass">Password</string>
    <string name="current_pass">Current Password</string>
    <string name="new_pass">New Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="change_pass">Change Password</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="contact">Contact</string>
    <string name="mail">E-mail</string>
    <string name="place">Place</string>
    <string name="post">Post</string>
    <string name="pin">Pin</string>
    <string name="district">District</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="dob">Birth Date</string>
    <string name="update">Update</string>
    <string name="qualification">Qualification</string>
    <string name="department">Department</string>
    <string name="view_more">View More</string>
    <string name="search">Search here</string>
    <string name="view_profile">View Profile</string>
    <string name="view_med">View Medicine</string>
    <string name="view_doc">View Doctor</string>
    <string name="view_disc">View Discount</string>
    <string name="near_pharm">View Near By Pharmacy</string>
    <string name="near_hosp">View Near By Hospital</string>
    <string name="doc_book">Book Doctor</string>
    <string name="med_book">Book Medicines</string>
    <string name="log_out">Log Out</string>
    <string name="cart">Add to Cart</string>
    <string name="buy">Buy Now</string>
    <string name="Chat">Chat</string>
    <string name="schedule">View Schedule</string>
    <string name="complaint">Submit Complaint</string>
    <string name="add_complaint">Write your feedback…</string>
    <string name="delete">Delete</string>
    <string name="title_activity_main_home">main_home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="date">Select Date</string>
    <string name="pay">Pay now</string>
    <string name="ac_no">Account Number</string>
    <string name="ac_pin_no">Pin Number</string>
    <string name="view_doc_book">View Doctor Booking</string>
    <string name="view_med_book">View Medicine Booking</string>
    <string name="sign_up_head">Sign Up</string>
    <string name="sign_up_moto">Hello guys! Welcome to MediCare App</string>
    <string name="image_moto">Upload your Photo for more clarification</string>
    <string name="change_pass_head">Change your Password here…</string>
    <string name="doc_head">View your Doctors here…</string>
    <string name="med_head">View your Medicines here…</string>
    <string name="hos_name">Hospital Name</string>
    <string name="doc_name">Doctor Name</string>
    <string name="amount">Amount</string>
    <string name="brand">Brand</string>
    <string name="description">Description</string>
    <string name="discount_head">Check your Discount</string>
    <string name="hospital_head">Hopsitals</string>
    <string name="pharm_head">Pharmacies</string>
    <string name="doc_book_head">Your doctor booking details</string>
    <string name="med_book_head">Your medicine booking details</string>
    <string name="done">Done</string>
    <string name="doc_sche_head">Doctor Schedule</string>
    <string name="book_succes">Booking Success</string>
    <string name="quantity_head">Select your Quantity</string>
    <string name="quantity">Quantity</string>
    <string name="welcome">Welcome to</string>
    <string name="about">About</string>
    <string name="about_medicare">Medicare is a web-application which customers can order their
        medicine by uploading the picture of prescription and get the home delivery of medicine by
        cash on delivery. Medicare solves the problem for people who lives in remote areas.
        The people will get the service available at any time the customer can order their medicines
        in 2 ways: By uploading the picture of prescription and By searching for a medicine.
        Our aim is to provide medicine to patients at the doorstep and aware customers for online
        medicine availability</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="todo">TODO</string>
    <string name="title_activity_patient_main_home">patient_main_home</string>

</resources>