<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".change_password"
    android:background="@color/black_2F">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="7dp"
        tools:layout_editor_absoluteY="196dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/change_pass_head"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:textFontWeight="300"/>

<!--            <ImageView-->
<!--                android:id="@+id/imageView5"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="400dp"-->
<!--                android:layout_marginLeft="0dp"-->
<!--                android:layout_marginRight="0dp"-->
<!--                app:srcCompat="@drawable/passwordimg" />-->

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animationView"
                android:layout_width="match_parent"
                android:layout_height="330dp"
                android:layout_marginTop="50dp"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:layout_constraintWidth_percent="0.5"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/changepassword"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/current_pass"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="@color/black_0"
                android:ems="10"
                android:hint="@string/current_pass"
                android:inputType="textPersonName"
                android:textColor="@color/yellow"
                android:textColorHint="@color/yellow"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/new_pass"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="@color/black_0"
                android:ems="10"
                android:hint="@string/new_pass"
                android:inputType="textPersonName"
                android:textColor="@color/yellow"
                android:textColorHint="@color/yellow"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/confirm_pass"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="@color/black_0"
                android:ems="10"
                android:hint="@string/confirm_pass"
                android:inputType="textPersonName"
                android:textColor="@color/yellow"
                android:textColorHint="@color/yellow"
                android:textSize="18sp" />

            <Button
                android:id="@+id/change_pass_btn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="50dp"
                android:backgroundTint="@color/yellow"
                android:text="@string/change_pass"
                android:textColor="@color/black_0"
                android:textSize="15sp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>